--- a/Desktop/html/html.html
+++ b/Desktop/html/html.html
@@ -1,22 +1,24 @@
 <html>
-	<head>
-		<link a href="style.css">
-	</head>
-	<body>
-	<ul>
-    <li>
-			<a href="minuoma.html" class="active">Anett</a>
-		</li>
-		<li>
-			<a href="kasparioma.html">Kaspar</a>
-		</li>
-		<li>
-			<a href="andersioma.html">Ander</a>
-		</li>
-	</ul>
+<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+<ul>
+  <li>
+	<a href="minuoma.html" class="active">Anett</a>
+  </li>
+  <li>
+	<a href="kasparioma.html"class="active">Kaspar</a>
+  </li>
+  <li>
+	<a href="andersioma.html">Ander</a>
+  </li>
+</ul>
   <div>
     <h1>HTML veebileht</h1>
     Olen absoluutselt kõik HTML kohta unustanud. <em>Shoutout to</em> <a href="w3schools.com">w3schools.com</a>.
   </div>
+  
+ <button id="button1" type="button"><b>Tee algust tööga</b></button>
 	</body>
 </html>
