tegin ka commiti

--- a/Desktop/html/html.html
+++ b/Desktop/html/html.html
@@ -11,7 +11,7 @@
 	<a href="kasparioma.html"class="active">Kaspar</a>
   </li>
   <li>
-	<a href="andersioma.html">Ander</a>
+	<a href="anderioma.html"class="active">Ander</a>
   </li>
 </ul>
   <div>
