--- a/Desktop/html/html.html
+++ b/Desktop/html/html.html
@@ -1,8 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head>
-		<link rel="stylesheet" type="text/css" href="style.css">
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script type="text/javascript" src="abc.json"></script>
 </head>
 <body>
+
 <ul>
   <li>
 	<a href="minuoma.html" class="active">Anett</a>
@@ -18,7 +22,7 @@
     <h1>HTML veebileht</h1>
     Olen absoluutselt kõik HTML kohta unustanud. <em>Shoutout to</em> <a href="w3schools.com">w3schools.com</a>.
   </div>
-  
- <button id="button1" type="button"><b>Tee algust tööga</b></button>
-	</body>
+ <button id="button1" type="button" onclick="smth()"><b>Kas tööga on algust tehtud?</b></button>
+ 
+</body>
 </html>
