Tegin uue vahelehe

--- a/Desktop/html/html.html
+++ b/Desktop/html/html.html
@@ -15,7 +15,7 @@
 	<a href="kasparioma.html"class="active">Kaspar</a>
   </li>
   <li>
-	<a href="anderioma.html"class="active">Ander</a>
+	<a href="anderileht.html"class="active">Ander</a>
   </li>
 </ul>
   <div>
@@ -23,6 +23,6 @@
     Olen absoluutselt kõik HTML kohta unustanud. <em>Shoutout to</em> <a href="w3schools.com">w3schools.com</a>.
   </div>
  <button id="button1" type="button" onclick="smth()"><b>Kas tööga on algust tehtud?</b></button>
- 
+
 </body>
 </html>
