Tegin enda vahelehte, nokkisin css-i, torkasin jscripti, supsasin maini.

--- a/Desktop/html/html.html
+++ b/Desktop/html/html.html
@@ -15,7 +15,7 @@
 	<a href="kasparioma.html"class="active">Kaspar</a>
   </li>
   <li>
-	<a href="anderileht.html"class="active">Ander</a>
+	<a href="anderileht.html" class="active" target="_blank">Ander</a>
   </li>
 </ul>
   <div>
