väike lisa nupule

--- a/Desktop/html/html.html
+++ b/Desktop/html/html.html
@@ -12,17 +12,17 @@
 	<a href="minuoma.html" class="active">Anett</a>
   </li>
   <li>
-	<a href="kasparioma.html"class="active">Kaspar</a>
+	<a href="Kaspar.html"class="active">Kaspar</a>
   </li>
   <li>
 	<a href="anderileht.html" class="active" target="_blank">Ander</a>
   </li>
 </ul>
-  <div>
+  <div id="div1">
     <h1>HTML veebileht</h1>
     Olen absoluutselt kõik HTML kohta unustanud. <em>Shoutout to</em> <a href="w3schools.com">w3schools.com</a>.
   </div>
- <button id="button1" type="button" onclick="smth()"><b>Kas tööga on algust tehtud?</b></button>
+ <button id="button1" type="button" onclick="smth()"><b>See nupp teeb midagi</b></button>
 
 </body>
 </html>
