Tegin mingisi asju

--- a/Desktop/html/vaheleht.html
+++ b/Desktop/html/vaheleht.html
@@ -9,7 +9,7 @@
   <body>
 <ul>
 <li>
-	<a href="main.html">Cupcake Clicker</a>
+	<a href="main.html"class="active">Cupcake Clicker</a>
 </li>
 <li>
 	<a href="vaheleht.html"class="active">Ajalugu</a>
