--- a/Desktop/html/main.html
+++ b/Desktop/html/main.html
@@ -18,7 +18,8 @@
 </ul>
   <div id="div1">
     <h1>Cookie Clicker</h1>
-    <div id = "cookie"> <div id = "chip"></div>
+    <div id = "küpsis"> <div id = "chip"></div> <div id = "chip2"></div>
+    <div id = "chip3"></div> <div id = "chip4"></div> <div id = "chip5"></div>
 	<div id = "numbers"></div>
   </div>
 </body>
