--- a/Desktop/html/main.html
+++ b/Desktop/html/main.html
@@ -8,19 +8,24 @@
 </head>
 <body>
 
-<ul>
-  <li>
-	<a href="main.html" class="active">Cookie Clicker</a>
+  <ul>
+    <li>
+	  <a href="main.html" class="active">Cookie Clicker</a>
   </li>
   <li>
 	<a href="vaheleht.html"class="active">Ajalugu</a>
   </li>y
-</ul>
-  <div id="div1">
-    <h1>Cookie Clicker</h1>
+  </ul>
+  <br><br>
+  <h1><p id="a">Cookie Clicker</p></h1>
+  <div id="div1" onclick="uuendaSkoori()">
+    <h1><span id=skoor> 0</span></h1>
     <div id = "küpsis"> <div id = "chip"></div> <div id = "chip2"></div>
     <div id = "chip3"></div> <div id = "chip4"></div> <div id = "chip5"></div>
 	<div id = "numbers"></div>
+  </div>
+  <div id="kassid">
+  
   </div>
 </body>
 </html>
