--- a/Desktop/html/main.html
+++ b/Desktop/html/main.html
@@ -6,26 +6,23 @@
   <script type="text/javascript" src="abc.json"></script>
   <title>Cookie Clicker</title>
 </head>
-<body>
-
+<body onload="Eksuspuroshion()">
   <ul>
     <li>
 	  <a href="main.html" class="active">Cookie Clicker</a>
   </li>
   <li>
-	<a href="vaheleht.html"class="active">Ajalugu</a>
-  </li>y
+	<a href="vaheleht.html" class="active">Ajalugu</a>
+  </li>
   </ul>
-  <br><br>
-  <h1><p id="a">Cookie Clicker</p></h1>
-  <div id="div1" onclick="uuendaSkoori()">
-    <h1><span id=skoor> 0</span></h1>
-    <div id = "küpsis"> <div id = "chip"></div> <div id = "chip2"></div>
-    <div id = "chip3"></div> <div id = "chip4"></div> <div id = "chip5"></div>
-	<div id = "numbers"></div>
-  </div>
-  <div id="kassid">
-  
+  <div id="keskala">
+    <h1><span id="skoor"> 0</span></h1>
+	<div onclick="uuendaSkoori()" id = "küpsis">
+	  <div id = "chip">
+		 <div id = "chip1"></div><div id = "chip2"></div>
+		 <div id = "chip3"></div> <div id = "chip4"></div><div id = "chip5"></div>
+	 </div>
+    </div>
   </div>
 </body>
 </html>
