--- a/Desktop/html/main.html
+++ b/Desktop/html/main.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="abc.json"></script>
   <title>Cookie Clicker</title>
 </head>
-<body onload="Eksuspuroshion()">
+<body>
   <ul>
     <li>
 	  <a href="main.html" class="active">Cookie Clicker</a>
@@ -24,8 +24,6 @@
 	 </div>
     </div>
   </div>
-  <div id="kassid">
-  <img style="height:50px" src="img/neko.gif">
-  </div>
+  <img onclick="bye()" id="kassid">
 </body>
 </html>
